# openapi/openapi.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.0
 info:
   title: API
   version: 1.0.0
+
 paths:
   /tasks:
     get:
@@ -41,6 +42,12 @@ paths:
       summary: Update a task
       tags:
         - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       requestBody:
         description: The task to update
         required: true
@@ -48,12 +55,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Task'
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
       responses:
         '200':
           description: The updated task
@@ -66,13 +67,6 @@ paths:
       summary: Delete a task
       tags:
         - tasks
-      requestBody:
-        description: The task to update
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Task'
       parameters:
         - name: id
           in: path
@@ -82,6 +76,80 @@ paths:
       responses:
         '204':
           description: The task was deleted
+
+  /users:
+    get:
+      summary: Get all users
+      tags: 
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items: 
+                  $ref: '#/components/schemas/User'
+  /users/post:
+    post:
+      summary: Create a new user
+      tags: 
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/by/{id}:
+    patch:
+      summary: Update a user
+      tags: 
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: The user to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/User'
+  /users/delete/{id}:
+    delete:
+      summary: Delete a user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: The user was deleted
+
 components:
   schemas:
     Task:
@@ -94,3 +162,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password: 
+          type: string
